--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -1,11 +1,11 @@
 {
   "name": "mtp-project-dashboard",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "next start -p 3001",
     "lint": "next lint"
   },
   "dependencies": {
