--- a/backend/package.json
+++ b/backend/package.json
@@ -8,12 +8,14 @@
     "convert": "node src/script.js",
     "dev": "nodemon src/index.js",
     "lint": "eslint src/**/*.js",
-    "format": "prettier --write src/**/*.js"
+    "format": "prettier --write src/**/*.js",
+    "setup-admin": "node src/scripts/setupAdmin.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@editorjs/editorjs": "^2.30.8",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
@@ -24,11 +26,13 @@
     "mongoose": "^7.0.3",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
-    "nodemailer": "^6.10.0"
+    "nodemailer": "^6.10.0",
+    "sharp": "^0.34.3"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "eslint": "^8.38.0",
-    "nodemon": "^2.0.22",
+    "nodemon": "^3.1.10",
     "prettier": "^2.8.7"
   }
 }
